setting grid minRowsToShow and virtualizationThreshold to the number of records returned by each query; modified grid defaults to prevent vertical scrollbars from showing; set grid height to auto

--- a/scale-ui/app/styles/components/grid.less
+++ b/scale-ui/app/styles/components/grid.less
@@ -1,5 +1,6 @@
 .grid-container {
     background: #fff;
+    margin-bottom: 20px;
 
     .scale-grid {
         width: auto;
@@ -34,12 +35,13 @@
     background-color: inherit;
 }
 
-.ui-grid-viewport {
-    width: 100% !important;
+.ui-grid, .ui-grid-viewport {
+    height: auto!important;
 }
 
 .pagination-controls {
     text-align: center;
+    margin-bottom: 20px;
 
     .pagination {
         margin: 10px 0 0 0;
